# Wolf3D-Mac

./: .gitignore  CMakeLists.txt  Mac.c  PickAMonitor.c
source/: Burger.c  Burger.h  PickAMonitor.c  SetupScalers68k.c  SetupScalersPPC.c  SnesMain.c  wolfdef.h
